   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.72
 ============

 Released on 

 Total files count:
 Total lines count: 
 maintainer/run-distcheck.sh:

 New features and improvements:

   - Rate: check validity and document orphans (todo #1454).
   - Unreconciliated/Unsettled entries: center the status indicator.

 Bug fixes:

   - AccountProperties: don't try to get expander status for root accounts.
   - DBMS upgrade: fix account archive remediation (todo #1482).
   - DBMS upgrade: better manage the possible errors (todo #1483).
   - TVARecordProperties: fix memory leak.
   - Unreconciliated entries: take the view up to date.
   - Unsettled entries: take the view up to date (todo #1481).

 Other changes:

   - ofaIStore: define new "ofa-istore-need-refilter" message.
   - Update to Fedora26 ecosystem.
   - Replace Gtk 3.22-deprecated gtk_menu_popup().
   - Replace Gtk 3.22-deprecated gdk_screen_get_width(), gdk_screen_get_height().

-----------------------------------------------------------------------
 Version 0.71
 ============

 Released on 2017-06-28

 Total files count:    845 files
 Total lines count: 576856 lines 
 maintainer/run-distcheck.sh: real	7m23.787s

 New features and improvements:

   - Recurrent operations: amount columns are defined as twins (todo #1471).

 Bug fixes:

   - Fix solde computing when archiving accounts.
   - Fix deletion of a single entry (todo #1473).
   - ofaBatTreeview: remove GTK_POLICY_NEVER attribute (todo #1472).
   - Fix guided input validity of operation and effect dates (todo #1470).

 Other changes:

   - 

-----------------------------------------------------------------------
 Version 0.70
 ============

 Released on 2017-05-07

 Total files count:    845 files
 Total lines count: 576954 lines
 maintainer/run-distcheck.sh: real	8m1.915s

 New features and improvements:

   - Accounts balance arguments are improved.