@@ -288,12 +288,19 @@ action_page_v_setup_actions( ofaActionPage *page, ofaButtonsBox *buttons_box )
 					OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->settle_action ),
 					_( "_Settle..." )));
 
+	ofa_buttons_box_add_spacer( buttons_box );
+
 	/* view account action */
 	priv->vaccount_action = g_simple_action_new( "vaccount", NULL );
 	g_signal_connect( priv->vaccount_action, "activate", G_CALLBACK( action_on_vaccount_activated ), page );
 	ofa_iactionable_set_menu_item(
 			OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->vaccount_action ),
 			_( "View the account..." ));
+	ofa_buttons_box_append_button(
+			buttons_box,
+			ofa_iactionable_new_button(
+					OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->vaccount_action ),
+					_( "_Account..." )));
 
 	/* view entry action */
 	priv->ventry_action = g_simple_action_new( "ventry", NULL );
@@ -301,6 +308,11 @@ action_page_v_setup_actions( ofaActionPage *page, ofaButtonsBox *buttons_box )
 	ofa_iactionable_set_menu_item(
 			OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->ventry_action ),
 			_( "View the entry..." ));
+	ofa_buttons_box_append_button(
+			buttons_box,
+			ofa_iactionable_new_button(
+					OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->ventry_action ),
+					_( "_Entry..." )));
 
 	/* view operation action */
 	priv->vope_action = g_simple_action_new( "vope", NULL );
@@ -308,6 +320,11 @@ action_page_v_setup_actions( ofaActionPage *page, ofaButtonsBox *buttons_box )
 	ofa_iactionable_set_menu_item(
 			OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->vope_action ),
 			_( "View the operation..." ));
+	ofa_buttons_box_append_button(
+			buttons_box,
+			ofa_iactionable_new_button(
+					OFA_IACTIONABLE( page ), priv->settings_prefix, G_ACTION( priv->vope_action ),
+					_( "_Operation..." )));
 }
 
 static void
